# coolq-keyword

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CQ_Json.exe.config  ExampleApp.sln  LICENSE  README.md  app.json  app.json.in  app_id.txt  appveyor.yml  conf.json  copy.bat  编译后点击---生成酷Q格式目录.bat
BIN-Release/@OBJ/: StrFun.nativecodeanalysis.sarif  appmain.nativecodeanalysis.sarif  fun.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif
BIN-Release/@OBJ/cn.xiaox.73756EB3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cn.xiaoxiaoge.GroupMonitor.lastbuildstate  cn.xiaoxiaoge.GroupMonitor.write.1u.tlog  link.2936.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CQ_APP/: CQ_APP.vcxproj  CQ_APP.vcxproj.filters  appVer.h  appinfo.h  appmain.cpp  fun.hpp  gui.cpp  gui.h  myJson.cpp  myJson.h
GroupMonitorCode/: .gitignore  ExampleApp.vcxproj  ExampleApp.vcxproj.filters  README.md  app.json  todo.txt  复制json.props  请在此指定酷Q目录.props  项目配置.props
GroupMonitorCode/dev/: test_main.cpp
GroupMonitorCode/lib/: SDK_Debug.idb  SDK_Debug.lib
GroupMonitorCode/src/: APPINFO.h  CQAPI.cpp  StrFun.cpp  appmain.cpp  fun.hpp  main.cpp  string_seh.h
GroupMonitorWin/: GroupMonitorWin.cpp  GroupMonitorWin.def  GroupMonitorWin.h  GroupMonitorWin.idl  GroupMonitorWin.rc  GroupMonitorWin.vcxproj  GroupMonitorWin.vcxproj.filters  RCa01520  RDa01520  WAllWord.cpp  WAllWord.h  WAloneList.cpp  WAloneList.h  WDefConfig.cpp  WDefConfig.h  WForwardMsg.cpp  WForwardMsg.h  WMain.cpp  WMain.h  WMainConfig.cpp  WMainConfig.h  WREWordTest.cpp  WREWordTest.h  WWordValue.cpp  WWordValue.h  resource.h  stdafx.cpp  stdafx.h
GroupMonitorWin/res/: GroupMonitorWin.rc2
include/CQ/: CQAPI.h  CQAPI_EX.h  CQEVE.h  CQEVEMsg.h  CQEVE_ALL.h  CQEVE_DiscussMsg.h  CQEVE_FriendAdd.h  CQEVE_GroupMsg.h  CQEVE_PrivateMsg.h  CQEVE_RequestAddGroup.h  CQLogger.h  CQMsgSend.h  CQTools.h  CQcode.h  CQconstant.h  INItool.h  Unpack.h  bufstream.h  cqdefine.h  winSpeak.h  youNeed.h
include/json/: myJson.cpp  myJson.h
lib/: libboost_filesystem-vc142-mt-s-x32-1_71.lib  libboost_filesystem-vc142-mt-x32-1_71.lib
src/: MyUtils.cpp  MyUtils.h  Update.cpp  Update.h  appInf.h  appInf.h.in  appmain.cpp  fun.hpp  gui.cpp  gui.h  moderation.hpp  myJson.cpp  myJson.h  mycq.hpp  mynetwork.cpp  mynetwork.h
test/: conf.json  test.cpp  test.vcxproj  test.vcxproj.filters
全部生成/: GroupMonitorWin.exp  GroupMonitorWin.lib  app.json  cn.xiaoxiaoge.GroupMonitor.exp  cn.xiaoxiaoge.GroupMonitor.lib
(+56 files in other folders)
